# medlab_motor_control_board

./: CMakeLists.txt  README.md  package.xml
include/medlab_motor_control_board/: mcb_ros.h
msg/: EnableMotor.msg  McbEncoderCurrent.msg  McbEncoders.msg  McbGains.msg  McbStatus.msg
src/: MCBHelper.cpp  MotorTestSine.cpp  mcb_ros.cpp
src/medlab_motor_control_board/: MotorTestSine.cpp  mcb_ros.cpp
srv/: CaptureToken.srv  ReleaseToken.srv
